--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "hawk": "^9.0.1",
     "image-webpack-loader": "^4.3.0",
     "lodash": "^4.17.10",
-    "markdown-it": "^13.0.1",
+    "markdown-it": "^8.4.1",
     "memorystore": "^1.6.0",
     "moment": "^2.22.2",
     "morgan": "^1.9.0",
@@ -101,15 +101,7 @@
   },
   "overrides": {
     "js-yaml": "3.14.1",
-    "semver-regex": "3.1.4",
-    "trim-newlines": "3.0.1",
-    "is-svg": "4.3.0",
-    "glob-parent": "5.1.2",
-    "got": "11.8.5",
-    "postcss": "7.0.36",
-    "color-string": "1.5.5",
-    "ajv": "6.12.3",
-    "yargs-parser": "13.1.2",
-    "mem": "4.0.0"
+    "semver-regex": "3.1.3",
+    "trim-newlines": "3.0.1"
   }
 }
