--- a/package.json
+++ b/package.json
@@ -42,8 +42,6 @@
     "axios": "^1.7.7",
     "babel-loader": "^9.1.3",
     "body-parser": "^1.20.3",
-    "browser-sync": "^3.0.2",
-    "browser-sync-v3-webpack-plugin": "^0.1.0",
     "case": "^1.5.5",
     "client-sessions": "^0.8.0",
     "compression": "^1.7.2",
@@ -78,7 +76,6 @@
     "sass": "^1.78.0",
     "sass-loader": "^16.0.1",
     "serve-favicon": "^2.5.0",
-    "sinon": "^18.0.0",
     "std-mocks": "^2.0.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.94.0",
@@ -89,6 +86,8 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.1",
+    "browser-sync": "^3.0.2",
+    "browser-sync-v3-webpack-plugin": "^0.1.0",
     "chai": "^5.1.1",
     "chai-as-promised": "^8.0.0",
     "chai-subset": "^1.6.0",
@@ -105,13 +104,20 @@
     "nock": "^13.5.5",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
-    "proxyquire": "^2.0.1"
+    "proxyquire": "^2.0.1",
+    "sinon": "^18.0.1"
   },
   "overrides": {
     "semver-regex": "3.1.4",
     "qs": "6.2.4",
     "http-cache-semantics": "4.1.1",
     "semver": "^7.5.2",
-    "trim-newlines": "^3.0.1"
+    "trim-newlines": "^3.0.1",
+    "path-to-regexp": "8.0.0",
+    "express": {
+      "path-to-regexp": "0.1.10"
+    },
+    "send": "0.19.0",
+    "serve-static": "1.16.2"
   }
 }
